# Customer-Churn-Prediction

./: log_setup.py  logging.yaml  main.py  pyproject.toml  templates.py
src/maxMLproejct/utils/: common.py
